--- a/fetch-emails.html
+++ b/fetch-emails.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Fetch Emails - E-Com Data Finder</title>
+    <title>Extract Emails - E-Com Data Finder</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" as="style">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -654,4 +654,4 @@
         });
     </script>
 </body>
-</html> 
+</html>
